--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.92.1",
+    "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "drei": "^2.2.21",
-    "framer-motion": "^10.16.16",
-    "framer-motion-3d": "^10.16.16",
+    "framer-motion": "^10.17.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "three": "^0.159.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.160.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
